--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,8 +98,26 @@ jobs:
             echo "❌ Cannot build - gradlew not found"
             exit 1
           fi
-      
-      - name: 🧪 Run All Tests
+      - name: 🧪 Clean Tests
+        run: |
+          echo "🧪 Running all tests with testAll task..."
+          if [ -f "code/gradlew" ]; then
+            cd code && ./gradlew cleanTestResults
+          else
+            echo "❌ Cannot run tests - gradlew not found"
+            exit 1
+          fi
+      - name: 🧪 Run Unit Tests
+        run: |
+          echo "🧪 Running all tests with testAll task..."
+          if [ -f "code/gradlew" ]; then
+            cd code && ./gradlew test -x generateAllureReport --continue
+          else
+            echo "❌ Cannot run tests - gradlew not found"
+            exit 1
+          fi
+        continue-on-error: true
+      - name: 🧪 Run Integration Tests
         run: |
           echo "🧪 Running all tests with testAll task..."
           if [ -f "code/gradlew" ]; then
