--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Java CI/CD Pipeline
+seldname: Java CI/CD Pipeline
 
 on:
   push:
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Build and Test
     services:
       postgres:
@@ -186,7 +186,7 @@ jobs:
   publish-report:
     if: always()
     needs: [build-and-test]
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     permissions:
       contents: write
