--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,16 +128,16 @@ jobs:
           fi
         continue-on-error: true
       
-      - name: Cache Gradle
-        uses: actions/cache@v4
-        with:
-          path: |
-            **/.gradle
-            **/gradle
-            **/build
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+      # - name: Cache Gradle
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       **/.gradle
+      #       **/gradle
+      #       **/build
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-gradle-
       
       - name: 📊 Collect Test Results
         if: always()
