--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -120,7 +120,7 @@ jobs:
         run: |
           echo "🧪 Running all tests with testAll task..."
           if [ -f "code/gradlew" ]; then
-            cd code/service/auth-service && ./gradlew startTestContainers --continue
+            cd code/service/auth-service && ./gradlew startTestContainers
           else
             echo "❌ Cannot run tests - gradlew not found"
             exit 1
