--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,14 +97,24 @@ jobs:
             echo "❌ Cannot build - gradlew not found"
             exit 1
           fi
-      - name: Cache Allure History
-        uses: actions/cache@v4
+      # - name: Cache Allure History
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: code/build/allure-history
+      #     key: ${{ runner.os }}-allure-history-${{ github.ref_name }}-${{ github.sha }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-allure-history-${{ github.ref_name }}-
+      #       ${{ runner.os }}-allure-history-
+
+      - name: Download Allure History
+        if: always()
+        uses: actions/download-artifact@v4
         with:
+          name: allure-history
           path: code/build/allure-history
-          key: ${{ runner.os }}-allure-history-${{ github.ref_name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-allure-history-${{ github.ref_name }}-
-            ${{ runner.os }}-allure-history-
+        continue-on-error: true
+
+          
       - name: 🧪 Clean Tests
         run: |
           echo "🧪 Running all tests with testAll task..."
@@ -174,7 +184,13 @@ jobs:
           # Save new history for next run
           mkdir -p build/allure-history && cp -r build/allure-report/history build/allure-history/
       
-
+      - name: Upload Allure History
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: code/build/allure-history
+        continue-on-error: true
       
       - name: Upload Allure HTML Report
         if: always()
