--- a/kubernetes/nginx/conf.d/default.conf
+++ b/kubernetes/nginx/conf.d/default.conf
@@ -14,14 +14,38 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Management page - исправленная версия
+    location = /management {
+        try_files /management.html =404;
+    }
+
+    location = /management/ {
+        return 302 /management;
+    }
+
     # Reserved
     location /reserved/ {
         try_files $uri $uri/ /index.html;
     }
 
-    # API
-    location /api/v1 {
-        proxy_pass http://gateway-service:8080/api/v1;
+    # API v1 - Swagger UI
+    location = /api/v1 {
+        return 302 /api/v1/;
+    }
+
+    location = /api/v1/ {
+        return 302 /swagger-ui/index.html?url=/v3/api-docs/v1;
+    }
+
+    # API endpoints (все остальные пути под /api/v1/)
+    location /api/v1/ {
+        # Если запрос именно к корню /api/v1/ - перенаправляем на Swagger
+        location = /api/v1/ {
+            return 302 /swagger-ui/index.html?url=/v3/api-docs/v1;
+        }
+        
+        # Все остальные пути под /api/v1/ проксируем к API
+        proxy_pass http://gateway-service:8080/api/v1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,7 +66,7 @@ server {
         sub_filter '="/swagger-ui/' '="/swagger-ui/';
         sub_filter 'href="/' 'href="/swagger-ui/';
         sub_filter 'src="/' 'src="/swagger-ui/';
-        sub_filter 'url("/' 'url("/swagger-ui/';
+        sub_filter 'url="/' 'url="/swagger-ui/';
         sub_filter_once off;
         sub_filter_types text/html text/css application/javascript;
     }
@@ -74,11 +98,7 @@ server {
         return 302 /swagger-ui/index.html;
     }
 
-    location = /api/v1/swagger {
-        return 302 /swagger-ui/index.html;
-    }
-
-    location = /api-docs/v1{
+    location = /api-docs/v1 {
         return 302 /v3/api-docs/v1;
     }
 
@@ -90,8 +110,7 @@ server {
     # docs with markdown rendering
     location /documentation {
         # HTML версия с рендерингом markdown
-        alias /usr/share/nginx/static/markdown-template.html;
-        # Явно указываем тип контента как HTML
+        try_files /markdown-template.html =404;
         default_type text/html;
         add_header Content-Type "text/html; charset=utf-8";
     }
@@ -111,7 +130,7 @@ server {
         add_header Cache-Control "public";
     }
 
-    # Status - исправленная версия
+    # Status - простая текстовая версия
     location /status {
         stub_status on;
         access_log off;
@@ -120,8 +139,9 @@ server {
 
     # Status pretty - HTML страница
     location = /status/pretty {
-        alias /usr/share/nginx/static/status.html;
-        index status.html;
+        try_files /status.html =404;
+        default_type text/html;
+        add_header Content-Type "text/html; charset=utf-8";
     }
 
     # Статические файлы
