--- a/code/service/gateway-service/build.gradle
+++ b/code/service/gateway-service/build.gradle
@@ -87,8 +87,11 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-web:6.5.3'
     implementation 'org.springframework.kafka:spring-kafka:3.3.10'
 
+    // Метрики 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 
-
+    
 	implementation 'com.atomikos:transactions-spring-boot3-starter:6.0.0'
 	
 	runtimeOnly 'org.postgresql:postgresql'
