--- a/code/shared/client-shared/build.gradle
+++ b/code/shared/client-shared/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
 
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
+    implementation 'io.r2dbc:r2dbc-pool:1.0.2.RELEASE'
     implementation 'io.projectreactor:reactor-core:3.6.0'
 
     // Тестовые зависимости
