--- a/code/shared/token-shared/build.gradle
+++ b/code/shared/token-shared/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 	testImplementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
     
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
+    implementation 'io.r2dbc:r2dbc-pool:1.0.2.RELEASE'
     implementation 'io.projectreactor:reactor-core:3.6.0'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.38'
